Fixing listItem spacing and presentation

--- a/RocketSeat/react/challenge-03/src/components/List/ListItem/ListItem.module.css
+++ b/RocketSeat/react/challenge-03/src/components/List/ListItem/ListItem.module.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-grow: 5;
   flex-wrap: wrap;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   align-items: center;
 }
 
@@ -37,17 +37,13 @@
   font-weight: bold;
 }
 
-.UserInfo span {
-  font-size: 12px;
-  color: #5c5c5c;
-}
-
 .UserControls {
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
   align-content: space-between;
   align-items: center;
+  margin-bottom: 5px;
   margin-left: 1vw;
 }
 
